--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,11 @@ classifiers =
     Environment :: Web Environment
     Framework :: Flask
     Topic :: Software Development :: Libraries :: Python Modules
+project_urls =
+    documentation = https://zx80.github.io/proxy-pattern-pool/
+    issues = https://github.com/zx80/proxy-pattern-pool/issues
+    sources = https://github.com/zx80/proxy-pattern-pool
+    package = https://pypi.org/project/ProxyPatternPool/
 
 [options]
 py_modules =
