--- a/.github/workflows/ppp.yml
+++ b/.github/workflows/ppp.yml
@@ -14,7 +14,8 @@ jobs:
         # broken: pypy3.7
         # broken: 3.7 (pymarkdownlnt)
         # 3.8 and 3.9: needs more Typing
-        python-version: ["3.10", "3.11", "3.12-dev"]
+        # 3.12-dev: issue with mypy
+        python-version: ["3.10", "3.11"]
     steps:
     # Setup
     - uses: actions/checkout@v3
