--- a/.github/workflows/ppp.yml
+++ b/.github/workflows/ppp.yml
@@ -30,13 +30,13 @@ jobs:
         pip install -e .[local,dev]
     # Checks
     - name: Check with mypy
-      run: make check.mypy
+      run: make VENV= check.mypy
     # - name: Check with black
     #  run: black --check ProxyPatternPool.py
     - name: Check with flake8
-      run: make check.flake8
+      run: make VENV= check.flake8
     - name: Check with pytest
-      run: make check.pytest
+      run: make VENV= check.pytest
     - name: Check with coverage
       run: |
         coverage run -m pytest --log-level=debug --capture=tee-sys test.py
