add py 3.12 test

--- a/.github/workflows/ppp.yml
+++ b/.github/workflows/ppp.yml
@@ -15,7 +15,7 @@ jobs:
         # broken: 3.7 (pymarkdownlnt)
         # 3.8 and 3.9: needs more Typing
         # 3.12-dev: issue with mypy
-        python-version: ["3.10", "3.11"]
+        python-version: ["3.10", "3.11", "3.12"]
     steps:
     # Setup
     - uses: actions/checkout@v3
