attempt at CI with pypy 3.10

--- a/.github/workflows/ppp.yml
+++ b/.github/workflows/ppp.yml
@@ -10,11 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # broken: pypy3.7
-        # broken: 3.7 (pymarkdownlnt)
-        # 3.8 and 3.9: needs more Typing
-        # 3.12-dev: issue with mypy
-        python-version: ["3.10", "3.11", "3.12"]
+        python-version: ["3.10", "3.11", "3.12", "pypy3.10"]
     steps:
     # Setup
     - uses: actions/checkout@v4
