--- a/.github/workflows/ppp.yml
+++ b/.github/workflows/ppp.yml
@@ -10,7 +10,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10", "3.11", "3.12", "3.13", "pypy3.10"]
+        # 3.13: gevent is not supported yet
+        python-version: ["3.10", "3.11", "3.12", "pypy3.10"]
     steps:
     # Setup
     - uses: actions/checkout@v4
