try more exclusions

--- a/.github/workflows/ppp.yml
+++ b/.github/workflows/ppp.yml
@@ -11,6 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         # 3.13: gevent is not supported yet
+        # 3.13: greenlet (eventlet?) is not supported yet
         python-version: ["3.10", "3.11", "3.12", "3.13", "pypy3.10"]
     steps:
     # Setup
