--- a/.github/workflows/ppp.yml
+++ b/.github/workflows/ppp.yml
@@ -15,7 +15,7 @@ jobs:
         # 3.13/3.14: TODO trigger nogil tests when available!
         # 3.13t 2024-11-28: broken rust interface for cryptography-cffi
         # 3.14t 2024-11-28: not supported
-        python-version: ["3.10", "3.11", "3.12", "3.13", "3.13t", "3.14", "pypy3.10"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14", "pypy3.10"]
     steps:
     # Setup
     - uses: actions/checkout@v4
