--- a/.github/workflows/ppp.yml
+++ b/.github/workflows/ppp.yml
@@ -17,14 +17,21 @@ jobs:
         # 3.14t 2024-11-28: not supported
         python:
         - version: "pypy3.10"
+          deps: local,crypto,dev
         - version: "3.10"
+          deps: local,crypto,dev
         - version: "3.11"
+          deps: local,crypto,dev
         - version: "3.12"
+          deps: local,crypto,dev
         - version: "3.13"
+          deps: local,crypto,dev
           env: PYTHON_GIL=1
         - version: "3.13t"
+          deps: local,dev
           env: PYTHON_GIL=0
         - version: "3.14"
+          deps: local,crypto,dev
           env: PYTHON_GIL=0
     steps:
     # Setup
@@ -41,7 +48,7 @@ jobs:
     - name: Install Python Dependencies
       run: |
         pip install -U pip
-        pip install -e .[local,dev]
+        pip install -e .[${{ matrix.python.deps }}]
     # Checks
     - name: Check with pyright
       run: make VENV= check.pyright
