--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,13 +28,11 @@ package = "https://pypi.org/project/ProxyPatternPool/"
 py-modules = [ "ProxyPatternPool" ]
 
 [project.optional-dependencies]
-# NOTE greenlet has strange undeclared dependencies on import, hence "cryptography"
+# NOTE greenlet has strange undeclared dependencies on import, eg "cryptography"
 local = [
   "werkzeug",
   "eventlet; python_version < '3.13'",
   "gevent; python_version < '3.13'"
 ]
-# 2025-03-06 3.13t error: failed to run custom build command for cryptography-cffi v0.1.0
-crypto = [ "cryptography" ]
 dev = [ "mypy", "pyright", "flake8", "black", "ruff", "pytest", "coverage", "pymarkdownlnt" ]
 pub = [ "build", "wheel", "twine" ]
