--- a/.github/workflows/ppp.yml
+++ b/.github/workflows/ppp.yml
@@ -21,10 +21,10 @@ jobs:
         - version: "3.11"
         - version: "3.12"
         - version: "3.13"
-          env: PYTHON_GIL=1
         - version: "3.13t"
           env: PYTHON_GIL=0
         - version: "3.14"
+        - version: "3.14t"
           env: PYTHON_GIL=0
     steps:
     # Setup
