--- a/.github/workflows/ppp.yml
+++ b/.github/workflows/ppp.yml
@@ -18,10 +18,12 @@ jobs:
         - version: "3.13"
         - version: "3.13t"
           env: PYTHON_GIL=0
+        - version: "3.13t"
+          env: PYTHON_GIL=1
         - version: "3.14"
         # FIXME 2025-03-06 coverage issue
         # - version: "3.14t"
-        #   env: PYTHON_GIL=0
+        #   env: PYTHON_GIL=0  # FIXME useful?
     steps:
     # Setup
     - uses: actions/checkout@v4
