--- a/.github/workflows/ppp.yml
+++ b/.github/workflows/ppp.yml
@@ -12,6 +12,7 @@ jobs:
       matrix:
         python:
         - version: "pypy3.10"
+        - version: "pypy3.11"
         - version: "3.10"
         - version: "3.11"
         - version: "3.12"
