--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -17,9 +17,8 @@ jobs:
       - name: Generate documentation
         run: |
           make doc
-          ln -s docs/_build/html _site
-          find docs/_build -type d -print | xargs chmod a+rx
-          find docs/_build -type f -print | xargs chmod a+r
+          find _site -type d -print | xargs chmod a+rx
+          find _site -type f -print | xargs chmod a+r
       - name: Upload to GitHub Pages
         uses: actions/upload-pages-artifact@v3
   deploy:
