--- a/.github/workflows/ppp.yml
+++ b/.github/workflows/ppp.yml
@@ -46,9 +46,7 @@ jobs:
     - name: Checkout Project
       uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python.version }}
-      # uses: actions/setup-python@v5
-      # FIXME switch to v6 when available
-      uses: actions/setup-python@main
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python.version }}
         allow-prereleases: true
